# stockseyes-package

./: .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
.claude/skills/stockseyes-add-endpoint/: SKILL.md
.claude/skills/stockseyes-add-language-sdk/: SKILL.md
.claude/skills/stockseyes-architecture/: SKILL.md
.claude/skills/stockseyes-node-sdk/: SKILL.md
.claude/skills/stockseyes-python-sdk/: SKILL.md
.github/workflows/: build.yml  node.yml  publish-node.yml  publish-python.yml  publish.yml  python.yml  spec.yml
fixtures/: quote.json  quote.normalized.json  search.json  search.normalized.json
node/: README.md  package-lock.json  package.json  tsup.config.ts  vitest.config.ts
node/examples/: backtest_strategy_params.mjs  smoke.mjs
node/src/: http.ts  index.ts  quote.ts  search.ts  types.ts
node/src/backtest/: chart.ts  csv.ts  engine.ts  index.ts  indicators.ts  types.ts
node/test/: http.test.ts  normalize.test.ts
python/: LICENSE  README.md  pyproject.toml
python/examples/: smoke.py
python/src/stockseyes/: __init__.py  _errors.py  _http.py  _quote.py  _search.py  _types.py
python/tests/: __init__.py  conftest.py  test_http.py  test_normalize.py
scripts/: check-contract.mjs
spec/: openapi.yaml
src/: historical.ts  http.ts  index.ts  quote.ts  search.ts  types.ts
