[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stockseyes"
version = "0.1.0"
description = "Official Stockseyes SDK for Python — real-time Indian stock market (NSE/BSE) quotes, instrument search, and market data via RapidAPI."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Tushar Singhal" }]
keywords = [
    "stockseyes",
    "stocks",
    "stock-market",
    "nse",
    "bse",
    "rapidapi",
    "finance",
    "market-data",
    "india",
    "indian-stock-market",
    "quotes",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
# Zero runtime dependencies — uses only stdlib urllib.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/stockseyes/stockseyes-package/tree/main/python#readme"
Repository = "https://github.com/stockseyes/stockseyes-package"
Issues = "https://github.com/stockseyes/stockseyes-package/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stockseyes"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
